--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,89 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: black;
+    color: white;
+}
+
+.container,
+.game-result,
+.score {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.game-title {
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    font-size: 4rem;
+    font-style: italic;
+}
+
+.game-container {
+    width: 700px;
+    height: 700px;
+}
+
+.display-result {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.display-result-info {
+    font-size: 2rem;
+}
+
+.game-score {
+    display: flex;
+    margin-top: 2rem;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.player-icon,
+.computer-icon {
+    margin-bottom: 2rem;
+    border: solid 1px white;
+}
+
+.player-score,
+.computer-score {
+    font-size: 2rem;
+}
+
+.game-moves {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    margin-top: 4rem;
+    border: solid 1px white;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+button {
+    border: solid 1px white;
+    background-color: black;
+    padding: 3px;
+}
+
+button:active {
+    background-color: white;
+}
+
+.page-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+a {
+    color: white;
 }
